# ai-cx01

./: README.md  app-automate-cap.md  automate-cap.md  doc.md  get_ticket_relevant_doc.py  get_ticket_user_info.py  main.py  main2.py  pyproject.toml  singleshot_prompt.py  user_prompt.txt
llm_clients/: claude_client.py  client_interface.py  gpt_client.py
outputs/: combined_output_11-07_14:18.json  user_prompt_11-07_14-24.json
prompts/: parse_user_conversation.txt
