[tool.poetry]
name = "singleshot"
version = "0.1.0"
description = ""
authors = ["Aditya Jindal <aditya@edralabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.57.1"
google-generativeai = "^0.8.5"
dotenv = "^0.9.9"
sqlalchemy = "^2.0.41"
pgvector = "^0.4.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
